my falacuties project

--- a/project.html
+++ b/project.html
@@ -12,7 +12,7 @@
     <div id="animals-character"></div>
     
     
-    <img id="character-image" src="" alt="Character Image">
+    <img id="character-image" src="https://bestanimations.com/Animals/Mammals/Cats/Lions/animated-lion-gif-11.gif" alt="Character Image">
     <h2>total votes <span id="vote-count">=</span></h2>
     <form id="votes-form">
         <input type="numer" placeholder="enter votes" id="votes" name="votes"/>
